Add macOS support and airgap-safe JCEF native resolution
- Initialize CEF on EDT via SwingUtilities.invokeAndWait on macOS
  (AppKit requires main thread for UI)
- Add --add-opens= flags for sun.awt, sun.lwawt, sun.lwawt.macosx
  in product launcher args (= format required by Equinox launcher)
- Add osgi.bootdelegation for sun.awt packages
- Resolve JCEF install dir with 3-level fallback: -Djcef.install.dir
  system property > jcef-bundle/ next to executable > ~/.jcef-bundle/
  (survives mvn clean rebuilds, works on airgapped networks)
- Fix Bundle-ClassPath missing '.' entry and build.properties missing
  source.. directive (classes were not included in JAR)
- Fix setup.sh to use case/function instead of bash 4 associative
  arrays for macOS compatibility
- Update docs with all platform run commands and airgapped workflow

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>